Add: Initial Page before Promoters

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -955,6 +955,9 @@ select {
 .h-24 {
   height: 6rem;
 }
+.h-screen {
+  height: 100vh;
+}
 .max-h-32 {
   max-height: 8rem;
 }
@@ -1464,6 +1467,12 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-\[100px\] {
+  font-size: 100px;
+}
+.text-\[50px\] {
+  font-size: 50px;
 }
 .font-bold {
   font-weight: 700;
